Dto, json deserializer 정의

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka:4.1.0'
+//    implementation 'io.debezium:debezium-connector-postgres:2.5.0.Final'
 //    implementation 'org.apache.kafka:kafka-streams'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
